name:                web-inv-route
version:             0.1
synopsis:            Composable, reversible, efficient web routing based on invertible invariants and bijections
description:         Utilities to route HTTP requests, mainly focused on path components.  Routes are specified using bijections and invariant functors, allowing run-time composition (routes can be distributed across modules), reverse and forward routing derived from the same specification, and O(log n) lookups.
license:             BSD3
author:              Dylan Simon
maintainer:          dylan@dylex.net
copyright:           2016
category:            Web
build-type:          Simple
cabal-version:       >=1.20

flag wai
  description: Provide wai-compatible interfaces

library
  exposed-modules:     
    Web.Route.Invertible.String
    Web.Route.Invertible.Parameter
    Web.Route.Invertible.Placeholder
    Web.Route.Invertible.Sequence
    Web.Route.Invertible.Path
    Web.Route.Invertible.Host
    Web.Route.Invertible.Method
    Web.Route.Invertible.Route
    Web.Route.Invertible.Request
    Web.Route.Invertible.Type
    Web.Route.Invertible.Monoid.Exactly
    Web.Route.Invertible.Monoid.Prioritized
    Web.Route.Invertible.Map
    Web.Route.Invertible.Map.Monoid
    Web.Route.Invertible.Map.Default
    Web.Route.Invertible.Map.Const
    Web.Route.Invertible.Map.ParameterType
    Web.Route.Invertible.Map.Placeholder
    Web.Route.Invertible.Map.Sequence
    Web.Route.Invertible.Map.Path
    Web.Route.Invertible.Map.Host
    Web.Route.Invertible.Map.Method
    Web.Route.Invertible.Map.Route

  build-depends:       
    base >= 4.8 && <5,
    containers >= 0.5,
    hashable,
    unordered-containers,
    text >= 0.10,
    bytestring >= 0.10,
    http-types >= 0.9,
    invertible
  default-language:    Haskell2010
  ghc-options: -Wall

  if flag(wai)
    exposed-modules: Web.Route.Invertible.Wai
    build-depends: wai >= 1

