name:                web-inv-route
version:             0
synopsis:            Composable, reversible, efficient web routing based on invertible invariants and bijections
description:
  Utilities to route HTTP requests, mainly focused on path components.  Routes are specified using bijections and invariant functors, allowing run-time composition (routes can be distributed across modules), reverse and forward routing derived from the same specification, and O(log n) lookups.
  .
  Most users will want to import only "Web.Route.Invertible.Wai" (or the generic "Web.Route.Invertible") depending on their framework to get full access to all routing functionality.
license:             BSD3
author:              Dylan Simon
maintainer:          dylan@dylex.net
copyright:           2016
category:            Web
build-type:          Simple
cabal-version:       >=1.20

source-repository head
  type: git
  location: https://github.com/dylex/web-inv-route

flag wai
  description: Provide wai-compatible interfaces

flag uri
  description: Support constructing URIs from routes

flag h
  description: Support heterogeneous, ordered routes using HList

library
  exposed-modules:     
    Web.Route.Invertible
    Web.Route.Invertible.String
    Web.Route.Invertible.Parameter
    Web.Route.Invertible.Placeholder
    Web.Route.Invertible.Sequence
    Web.Route.Invertible.Path
    Web.Route.Invertible.Host
    Web.Route.Invertible.Method
    Web.Route.Invertible.Route
    Web.Route.Invertible.HRoute
    Web.Route.Invertible.Request
    Web.Route.Invertible.Type
    Web.Route.Invertible.Result
    Web.Route.Invertible.Monoid.Exactly
    Web.Route.Invertible.Monoid.Prioritized
    Web.Route.Invertible.Map
    Web.Route.Invertible.Map.Monoid
    Web.Route.Invertible.Map.Default
    Web.Route.Invertible.Map.Const
    Web.Route.Invertible.Map.Bool
    Web.Route.Invertible.Map.ParameterType
    Web.Route.Invertible.Map.Placeholder
    Web.Route.Invertible.Map.Sequence
    Web.Route.Invertible.Map.Path
    Web.Route.Invertible.Map.Host
    Web.Route.Invertible.Map.Method
    Web.Route.Invertible.Map.Route
    Web.Route.Invertible.Map.HRoute

  build-depends:       
    base >= 4.8 && <5,
    containers >= 0.5,
    hashable,
    unordered-containers,
    text >= 0.10,
    bytestring >= 0.10,
    http-types >= 0.9,
    invertible > 0.1
  default-language: Haskell2010
  ghc-options: -Wall

  if flag(wai)
    exposed-modules: Web.Route.Invertible.Wai
    build-depends: wai >= 1

  if flag(uri)
    exposed-modules: Web.Route.Invertible.URI
    build-depends: network-uri

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    base,
    text,
    QuickCheck,
    web-inv-route
